fixed layout shifting in yourTalentOne section , remove locomotive package, add scrollbar css

--- a/src/index.css
+++ b/src/index.css
@@ -114,8 +114,25 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
-  /* @media screen and (max-width: 768px){
-    html{
-      font-size: 8px;
-    }
-  } */
+/* **************Scrollbar******************* */
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
